param validation.  collapsable parameters.  bug fixes.

--- a/src/ParameterView.css
+++ b/src/ParameterView.css
@@ -7,11 +7,7 @@
     margin: .5em;
     width: calc(100% - 1.0em);
 }
-.parameterItem:focus-within
-{
-    border: 3px solid blue;
-    border-radius: .25em;
-}
+
 .param-label
 {
     margin: 10px;
@@ -45,4 +41,15 @@
 {
     font-style: italic;
     font-weight: 500;
+}
+
+.parameter-field-set
+{
+    margin: 0.5em;
+}
+
+.parameter-field-set:focus-within
+{
+    border: 3px solid blue;
+    border-radius: .25em;
 }
